--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,12 +34,13 @@ android {
 
 dependencies {
 
+    implementation 'androidx.preference:preference:1.2.0'
     def lifecycle_version = "2.4.1"
     def room_version = "2.4.2"
     def paging_version = "3.1.1"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
 
@@ -66,8 +67,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    implementation 'com.tbuonomo:dotsindicator:4.2'
-
 
     implementation "androidx.paging:paging-runtime:$paging_version"
     implementation "androidx.paging:paging-rxjava3:$paging_version"
@@ -82,6 +81,8 @@ dependencies {
     implementation 'jp.wasabeef:picasso-transformations:2.2.1'
 
     implementation "androidx.browser:browser:1.4.0"
+
+    implementation 'com.google.android.material:material:1.6.0'
 
 
     implementation "org.apache.commons:commons-lang3:3.12.0"
