--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Anichan">
         <activity
+            android:name=".UI.Activities.TestActivity"
+            android:exported="false" />
+        <activity
             android:name=".UI.Activities.MangaRankingActivity"
             android:exported="false" />
         <activity
