--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:exported="false" />
         <activity
             android:name=".UI.Activities.MangaRankingActivity"
+            android:parentActivityName=".UI.Activities.MainActivity"
             android:exported="false" />
         <activity
             android:name=".UI.Activities.ScheduleActivity"
@@ -59,7 +60,7 @@
             android:name=".UI.Activities.SplashActivity"
             android:theme="@style/SplashTheme" />
         <activity
-            android:name=".UI.Activities.AnimeChartActivity"
+            android:name=".UI.Activities.AnimeRankingActivity"
             android:parentActivityName=".UI.Activities.MainActivity" />
         <activity
             android:name=".UI.Activities.MainActivity"
