--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 
 dependencies {
     implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.fragment:fragment:1.5.3'
     def lifecycle_version = "2.5.1"
     def room_version = "2.4.3"
     def paging_version = "3.1.1"
@@ -82,6 +83,7 @@ dependencies {
     implementation "androidx.browser:browser:1.4.0"
 
     implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.3'
 
 
     implementation "org.apache.commons:commons-lang3:3.12.0"
