--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,10 @@ buildscript {
         maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
     dependencies {
+        def nav_version = "2.5.2"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.android.tools.build:gradle:7.0.4'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0"
 
     }
 }
