--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.3'
 
+    implementation 'com.google.android.gms:play-services-ads:21.2.0'
+
     implementation "app.futured.donut:library:2.0.0"
     implementation "org.apache.commons:commons-lang3:3.12.0"
     testImplementation 'junit:junit:4.13.2'
