--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'androidx.fragment:fragment:1.5.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.5.1"
     def room_version = "2.4.3"
     def paging_version = "3.1.1"
