--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,21 @@
 plugins {
     id 'com.android.application'
     id 'androidx.navigation.safeargs'
+    id 'com.google.android.gms.oss-licenses-plugin'
+
 }
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'com.google.android.gms.oss-licenses-plugin'
+
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.omnicoder.anichan"
         minSdk 21
-        targetSdk 31
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -35,14 +39,14 @@ android {
 
 dependencies {
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.fragment:fragment:1.5.3'
+    implementation 'androidx.fragment:fragment:1.5.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.5.1"
     def room_version = "2.4.3"
     def paging_version = "3.1.1"
 
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
 
@@ -60,11 +64,11 @@ dependencies {
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
 
-    implementation 'com.google.dagger:dagger:2.38.1'
+    implementation 'com.google.dagger:dagger:2.40.1'
 
-    implementation "androidx.navigation:navigation-fragment:2.5.2"
+    implementation "androidx.navigation:navigation-fragment:2.5.3"
 
-    implementation "androidx.navigation:navigation-ui:2.5.2"
+    implementation "androidx.navigation:navigation-ui:2.5.3"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
@@ -84,14 +88,17 @@ dependencies {
 
     implementation "androidx.browser:browser:1.4.0"
 
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.fragment:fragment-ktx:1.5.3'
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
-    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
 
     implementation "app.futured.donut:library:2.0.0"
     implementation "org.apache.commons:commons-lang3:3.12.0"
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
