--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.android.tools.build:gradle:7.3.1'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
+        classpath("com.google.android.gms:oss-licenses-plugin:0.10.6")
 
     }
 }
