--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,15 @@ apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 
 android {
     compileSdk 33
-
+    aaptOptions {
+        cruncherEnabled = false
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
     defaultConfig {
         applicationId "com.omnicoder.anichan"
         minSdk 21
