--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,11 +50,11 @@ dependencies {
     implementation 'androidx.fragment:fragment:1.5.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def lifecycle_version = "2.5.1"
-    def room_version = "2.4.3"
+    def room_version = "2.5.0"
     def paging_version = "3.1.1"
 
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
 
@@ -92,19 +92,19 @@ dependencies {
     implementation "androidx.room:room-rxjava3:$room_version"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'jp.wasabeef:picasso-transformations:2.2.1'
+//    implementation 'jp.wasabeef:picasso-transformations:2.2.1'
 
     implementation "androidx.browser:browser:1.4.0"
 
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
+    implementation "app.futured.donut:donut:2.2.2"
 
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
     implementation 'com.google.android.gms:play-services-ads:21.4.0'
 
-    implementation "app.futured.donut:library:2.0.0"
     implementation "org.apache.commons:commons-lang3:3.12.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
