--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,20 +10,14 @@ apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 
 
 android {
-    compileSdk 33
+    compileSdk 34
 //    aaptOptions {
 //        cruncherEnabled = false
 //    }
-    lintOptions {
-        checkReleaseBuilds false
-        // Or, if you prefer, you can continue to check for errors in release builds,
-        // but continue the build even when errors are found:
-        abortOnError false
-    }
     defaultConfig {
         applicationId "com.omnicoder.anichan"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -43,71 +37,67 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     namespace 'com.omnicoder.anichan'
+    lint {
+        abortOnError false
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
-    implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.fragment:fragment:1.5.5'
+    // AndroidX Libraries
+    implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.fragment:fragment:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    def lifecycle_version = "2.5.1"
-    def room_version = "2.5.0"
-    def paging_version = "3.1.1"
-
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-splashscreen:1.0.1'
 
-    implementation 'androidx.core:core-splashscreen:1.0.0'
-
-
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-
-    // Retrofit 2
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.moshi:moshi:1.12.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-
-    // Hilt
-    implementation 'com.google.dagger:hilt-android:2.44.2'
-    annotationProcessor 'com.google.dagger:hilt-android-compiler:2.44'
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
-    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
-
-    implementation 'com.google.dagger:dagger:2.44.2'
-
-    implementation "androidx.navigation:navigation-fragment:2.5.3"
-
-    implementation "androidx.navigation:navigation-ui:2.5.3"
-
+// AndroidX Lifecycle and Room
+    def room_version = "2.6.0"
+    def paging_version = "3.2.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-
-
-    implementation "androidx.paging:paging-runtime:$paging_version"
-    implementation "androidx.paging:paging-rxjava3:$paging_version"
-
-    //Rxjava
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.0'
     implementation "androidx.room:room-rxjava3:$room_version"
 
+
+// Retrofit and Moshi
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.moshi:moshi:1.15.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+
+// Dagger and Hilt
+    implementation 'com.google.dagger:hilt-android:2.48.1'
+    annotationProcessor 'com.google.dagger:hilt-android-compiler:2.48.1'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation 'com.google.dagger:dagger:2.48.1'
+
+// Android Navigation
+    implementation "androidx.navigation:navigation-fragment:2.7.4"
+    implementation "androidx.navigation:navigation-ui:2.7.4"
+
+// Image Loading
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation "androidx.browser:browser:1.5.0"
+// Other Libraries
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-rxjava3:$paging_version"
+    implementation "androidx.browser:browser:1.6.0"
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.1'
+    implementation 'app.futured.donut:donut:2.2.3'
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+    implementation 'com.google.android.gms:play-services-ads:22.4.0'
+    implementation 'org.apache.commons:commons-lang3:3.13.0'
 
-    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
-
-    implementation "app.futured.donut:donut:2.2.2"
-
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.fragment:fragment-ktx:1.5.5'
-
-    implementation 'com.google.android.gms:play-services-ads:21.5.0'
-
-    implementation "org.apache.commons:commons-lang3:3.12.0"
+// Testing Libraries
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
 }
