--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,14 @@ buildscript {
     dependencies {
         def nav_version = "2.5.2"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:8.1.2'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
         classpath("com.google.android.gms:oss-licenses-plugin:0.10.6")
 
     }
 }
 
-task clean(type: Delete) {
+
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
